--- a/draw.html
+++ b/draw.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Morph | Draw</title>
+  <link rel="shortcut icon" href="img/favicon.png">
 
   <link rel="stylesheet" type="text/css" href="css/app.css" />
   <link rel="stylesheet" type="text/css" href="css/ui.css" />
