--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Morph</title>
+  <link rel="shortcut icon" href="img/favicon.png">
 
   <link rel="stylesheet" type="text/css" href="css/app.css" />
   <link rel="stylesheet" type="text/css" href="css/ui.css" />
