--- a/draw.html
+++ b/draw.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/vmouse.js"></script>
 <script type="text/javascript" src="js/draw.js"></script>
 </head>
 <body>
