--- a/draw.html
+++ b/draw.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="apple-mobile-web-app-capable" content="yes">
 <title>Morph | Draw</title>
 <link rel="shortcut icon" href="img/favicon.png">
 
