--- a/draw.html
+++ b/draw.html
@@ -5,6 +5,10 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <title>Morph | Draw</title>
 <link rel="shortcut icon" href="img/favicon.png">
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="img/morphdev.png" />
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/morphdev.png" />
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/morphdev.png" />
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/morphdev.png" />
 
 <link rel="stylesheet" type="text/css" href="css/app.css" />
 <link rel="stylesheet" type="text/css" href="css/ui.css" />
