First pass at getting elements on the screen

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <title>Morph</title>
 
-    <script type="text/javascript" charset="utf-8" src="game/proto.js"></script>
     <link rel="stylesheet" type="text/css" href="css/app.css" />
     <link rel="stylesheet" type="text/css" href="css/ui.css" />
     <link rel="stylesheet" type="text/css" href="css/uni05.css" />
@@ -14,6 +13,18 @@
 <div id="buffer"></div>
 <div id="game">
 </div>
-
+    
 </body>
+<script type="text/javascript" charset="utf-8" src="game/jquery.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/utils.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/inherit.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/game.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/sprite.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/entity.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/level.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/hero.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/enemy.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/terrain.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/interactable.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/inventory.js"></script>
 </html>
