First pass at collision detection, jumping, and gravity

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 </div>
     
 </body>
-<script type="text/javascript" charset="utf-8" src="game/jquery.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="lib/jquery.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="lib/inherit.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/utils.js"></script>
-<script type="text/javascript" charset="utf-8" src="game/inherit.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/game.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/vector.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/sprite.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/entity.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/level.js"></script>
