--- a/video/index.html
+++ b/video/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="column">
-  <h2>Loop 1:</h2>
+  <h2>Attack!</h2>
   <video src="mrock2.mov" preload="auto" controls></video>
 </div>
 </body>
