Added machine - transform to Block - Block jumps to kill enemies

--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
 <script type="text/javascript" charset="utf-8" src="game/enemy.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/terrain.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/interactable.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/machine.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/inventory.js"></script>
 </html>
