Trying out new grid explainer on landing page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,77 @@
 ---
 layout: default
-title: This is MORPH
 ---
+<p>
+MORPH is an open-world, RPG, 2D platform/puzzle game in early stages of development.
+This site was created for the sole purpose of blogging about the game's development
+(as well as collecting <a href="#">sign ups</a>).
+</p>
+<div id="sprite-grid">
+  <div class="sprite-demo">
+    <img src="/img/morph/block.png" alt="" />
+    <!--
+    <div class="popup">
+      <h4>Morph</h4>
+      <p>This is Morph. He's a block who can jump on enemies to kill them. He's also a shape shifter. His different forms are more than just cosmetic. They also give him different abilities which can help him move around and defeat obstacles on his adventure.</p>
+    </div>
+    -->
+  </div>
+  <div class="sprite-demo">
+    <img src="/img/morph/man.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+    <img src="/img/morph/frog.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+    <img src="/img/morph/boat.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+      <img src="/img/morph/plane.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+      <img src="/img/morph/jellyfish.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+      <img src="/img/morph/clock.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+      <img src="/img/morph/flame.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+      <img src="/img/enemy/monster.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+      <img src="/img/enemy/turret.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+      <img src="/img/enemy/bird.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+      <img src="/img/enemy/sub.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+      <img src="/img/enemy/robot.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+      <img src="/img/morph/friend.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+      <img src="/img/morph/friend-monster.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+      <img src="/img/morph/kid.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+      <img src="/img/enemy/boss.png" alt="" />
+  </div>
+  <div class="sprite-demo">
+      <img src="/img/morph/machine.png" alt="" />
+  </div>
+</div>
 
 <!-- Mailchimp sign up here -->
 
+<!--
 <div id="sign-up">
   <form action="">
     <div class="row">
@@ -22,3 +89,4 @@ title: This is MORPH
     </div>
   </form>
 </div>
+-->
