Editor can add/remove columns now to make larger levels

--- a/editor/index.html
+++ b/editor/index.html
@@ -18,7 +18,11 @@
   <div id="sprites">
   </div>
 </div>
-<div id="game"></div>
+<a href="javascript:void(0);" id="add-column">+</a>
+<a href="javascript:void(0);" id="remove-column">-</a>
+<div id="game-wrapper">
+  <div id="game"></div>
+</div>
 <div id="rectangle-tool"></div>
     
 </body>
