--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <script type="text/javascript" charset="utf-8" src="game/inventory.js"></script>
 <script type="text/javascript" charset="utf-8">
 $(function() {
-    Game.init( 0 );
+    Game.init( 'Intro' );
 });
 </script>
 </html>
