Fixing editing with mordernizr and vmouse

--- a/editor/index.html
+++ b/editor/index.html
@@ -27,6 +27,8 @@
     
 </body>
 <script type="text/javascript" charset="utf-8" src="../lib/jquery.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="../lib/vmouse.js"></script>
+<script type="text/javascript" charset="utf-8" src="../lib/modernizr.js"></script>
 <script type="text/javascript" charset="utf-8" src="../lib/inherit.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/utils.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/game.js"></script>
