--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" type="text/css" href="css/uni05.css" />
 </head>
 <body>
+<div id="fonts">
+  <div style="font-family: 'uni05'">uni05</div>
+</div>
 
 <div class="buffer"></div>
 <div id="game">
@@ -49,6 +52,7 @@
 <script type="text/javascript" charset="utf-8" src="game/interactable.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/machine.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/inventory.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/menu.js"></script>
 <script type="text/javascript" charset="utf-8">
 $(function() {
     Game.skipResize = true;
