--- a/editor/index.html
+++ b/editor/index.html
@@ -42,6 +42,7 @@
 <script type="text/javascript" charset="utf-8" src="../game/interactable.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/machine.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/inventory.js"></script>
+<script type="text/javascript" charset="utf-8" src="../game/menu.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/drag-tracker.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/editor.js"></script>
 <script type="text/javascript" charset="utf-8">
