Embed needs modernizr, vmouse, and menu

--- a/embed/index.html
+++ b/embed/index.html
@@ -20,6 +20,8 @@
     
 </body>
 <script type="text/javascript" charset="utf-8" src="../lib/jquery.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="../lib/vmouse.js"></script>
+<script type="text/javascript" charset="utf-8" src="../lib/modernizr.js"></script>
 <script type="text/javascript" charset="utf-8" src="../lib/inherit.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/utils.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/game.js"></script>
@@ -33,6 +35,7 @@
 <script type="text/javascript" charset="utf-8" src="../game/interactable.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/machine.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/inventory.js"></script>
+<script type="text/javascript" charset="utf-8" src="../game/menu.js"></script>
 <script type="text/javascript" charset="utf-8">
 Game.viewportTileWidth = 43;
 Game.viewportTileHeight = 20;
