First pass at the kid and cut scenes  - automatic dialog needs work - need visual speech bubbles

--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
 <script type="text/javascript" charset="utf-8" src="game/vector.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/sprite.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/entity.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/scene.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/level.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/hero.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/enemy.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/friend.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/terrain.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/interactable.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/machine.js"></script>
