First pass at abstracting out settings into settings.js - added self-invocating wrappers as well

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <script type="text/javascript" charset="utf-8" src="lib/modernizr.js"></script>
 <script type="text/javascript" charset="utf-8" src="lib/inherit.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/utils.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/settings.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/game.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/vector.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/sprite.js"></script>
@@ -58,7 +59,7 @@
 <script type="text/javascript" charset="utf-8">
 $(function() {
     Game.skipResize = true;
-    Game.init( 'intro' );
+    Game.init( 'playground' );
 });
 </script>
 </html>
