Changed default size - 27px tile size - 25 x 14 tile viewport - first level is 200 tiles wide - actual attempt at a level

--- a/editor/index.html
+++ b/editor/index.html
@@ -32,10 +32,12 @@
 <script type="text/javascript" charset="utf-8" src="../lib/modernizr.js"></script>
 <script type="text/javascript" charset="utf-8" src="../lib/inherit.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/utils.js"></script>
+<script type="text/javascript" charset="utf-8" src="../game/settings.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/game.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/vector.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/sprite.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/entity.js"></script>
+<script type="text/javascript" charset="utf-8" src="../game/scene.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/level.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/hero.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/enemy.js"></script>
