--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <script type="text/javascript" charset="utf-8">
 $(function() {
     Game.skipResize = true;
-    Game.init( 'playground' );
+    Game.init( 'first' );
 });
 </script>
 </html>
