First pass at signs - plain text information with text wrap

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <script type="text/javascript" charset="utf-8">
 $(function() {
     Game.skipResize = true;
-    Game.init( 'first' );
+    Game.init( 'second' );
 });
 </script>
 </html>
