Dialog with friendly NPCs

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 <script type="text/javascript" charset="utf-8" src="game/interactable.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/machine.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/inventory.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/signs.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/dialog.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/menu.js"></script>
 <script type="text/javascript" charset="utf-8">
 $(function() {
