pulled out colors as variables

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <script type="text/javascript" charset="utf-8">
 $(function() {
     Game.skipResize = true;
-    Game.init( 'second' );
+    Game.init( 'first' );
 });
 </script>
 </html>
