--- a/editor/index.html
+++ b/editor/index.html
@@ -46,6 +46,10 @@
 <script type="text/javascript" charset="utf-8" src="../game/interactable.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/machine.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/inventory.js"></script>
+<script type="text/javascript" charset="utf-8" src="../game/quests.js"></script>
+<script type="text/javascript" charset="utf-8" src="../game/questlog.js"></script>
+<script type="text/javascript" charset="utf-8" src="../game/signs.js"></script>
+<script type="text/javascript" charset="utf-8" src="../game/dialog.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/menu.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/drag-tracker.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/editor.js"></script>
