Added base16 themes

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <script type="text/javascript" charset="utf-8" src="lib/inherit.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/utils.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/settings.js"></script>
+<!-- <script type="text/javascript" charset="utf-8" src="themes/base16-monokai.dark.js"></script> -->
 <script type="text/javascript" charset="utf-8" src="game/game.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/vector.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/sprite.js"></script>
@@ -63,7 +64,7 @@
 <script type="text/javascript" charset="utf-8">
 $(function() {
     Game.skipResize = true;
-    Game.init( 'second' );
+    Game.init( 'first' );
 });
 </script>
 </html>
