--- a/editor/index.html
+++ b/editor/index.html
@@ -18,6 +18,7 @@
   <div id="sprites">
   </div>
 </div>
+<input type="text" id="level-name" value="" placeholder="Level Name">
 <input type="text" id="columns" value="">
 <a href="javascript:void(0);" id="add-column">+</a>
 <a href="javascript:void(0);" id="remove-column">-</a>
