--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <script type="text/javascript" charset="utf-8">
 $(function() {
     Game.skipResize = true;
-    Game.init( 'second' );
+    Game.init( 'fourth' );
 });
 </script>
 </html>
