First pass at "map"

--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
 <script type="text/javascript" charset="utf-8" src="game/questlog.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/signs.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/dialog.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/map.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/menu.js"></script>
 <script type="text/javascript" charset="utf-8">
 $(function() {
     Game.skipResize = true;
-    Game.init( 'fourth' );
+    Game.init( 'impressionism' );
 });
 </script>
 </html>
