First pass at walkthrough bubbles

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <script type="text/javascript" charset="utf-8" src="game/sprite.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/entity.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/scene.js"></script>
+<script type="text/javascript" charset="utf-8" src="game/walkthrough.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/level.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/hero.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/enemy.js"></script>
