--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <script type="text/javascript" charset="utf-8">
 $(function() {
     Game.skipResize = true;
-    Game.init( 'impressionism' );
+    Game.init( 'irontown' );
 });
 </script>
 </html>
