Trying to shrink

--- a/index.html
+++ b/index.html
@@ -14,13 +14,8 @@
 
     <link rel="stylesheet" type="text/css" href="css/app.css" />
     <link rel="stylesheet" type="text/css" href="css/ui.css" />
-    <link rel="stylesheet" type="text/css" href="css/uni05.css" />
 </head>
 <body>
-
-<div id="fonts">
-  <div style="font-family: 'uni05'">uni05</div>
-</div>
 
 <div class="buffer"></div>
 <div id="game">
@@ -44,16 +39,13 @@
 <script type="text/javascript" charset="utf-8" src="game/vector.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/sprite.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/entity.js"></script>
-<script type="text/javascript" charset="utf-8" src="game/walkthrough.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/level.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/hero.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/enemy.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/terrain.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/interactable.js"></script>
-<script type="text/javascript" charset="utf-8" src="game/machine.js"></script>
-<script type="text/javascript" charset="utf-8" src="game/inventory.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/menu.js"></script>
 <script type="text/javascript" charset="utf-8">
-    Game.init( 'fade-to-black' );
+    Game.init( 'impressionism' );
 </script>
 </html>
