Making smaller - added build script

--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
 <script type="text/javascript" charset="utf-8" src="game/interactable.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/menu.js"></script>
 <script type="text/javascript" charset="utf-8">
-    Game.init( 'impressionism' );
+    Game.init( 'fade-to-black' );
 </script>
 </html>
