Removed more stuff

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 </body>
 <script type="text/javascript" charset="utf-8" src="lib/inherit.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/utils.js"></script>
-<script type="text/javascript" charset="utf-8" src="game/settings.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/game.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/vector.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/sprite.js"></script>
@@ -44,8 +43,7 @@
 <script type="text/javascript" charset="utf-8" src="game/enemy.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/terrain.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/interactable.js"></script>
-<script type="text/javascript" charset="utf-8" src="game/menu.js"></script>
 <script type="text/javascript" charset="utf-8">
-    Game.init( 'fade-to-black' );
+    Game.init( 'impressionism' );
 </script>
 </html>
