--- a/index.html
+++ b/index.html
@@ -3,14 +3,7 @@
 <head>
     <meta charset="UTF-8" />
 
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="shortcut icon" href="img/favicon.png">
-    <link rel="apple-touch-icon-precomposed" sizes="57x57" href="img/morphdev.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/morphdev.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/morphdev.png" />
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/morphdev.png" />
-
-    <title>Morph</title>
+    <title>Rough Night</title>
 
     <link rel="stylesheet" type="text/css" href="css/app.css" />
     <link rel="stylesheet" type="text/css" href="css/ui.css" />
@@ -19,16 +12,12 @@
 
 <div class="buffer"></div>
 <div id="game">
-</div>
-
-<div class="left-controls">
-  <button class="action"></button>
-  <button class="direction up"></button>
-  <button class="pause"></button>
-</div>
-<div class="right-controls">
-  <button class="direction left"></button>
-  <button class="direction right"></button>
+  <div id="rules">
+    <p>You woke up in a world of dark tunnels. You must escape as fast as you can!</p>
+    <p>Use the arrow keys to move left and right.</p>
+    <p>Use X to pick up and drop rocks.</p>
+    <p>Use Z to jump. Z also let's you throw rocks when holding one.</p>
+  </div>
 </div>
 
 </body>
