Game over - figured out a way to shrink level.js size

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
 <div class="buffer"></div>
 <div id="game">
+  <div id="game-over">
+    <h1>GAME OVER</h1>
+  </div>
   <div id="rules">
     <p>You woke up in a world of dark tunnels. You must escape as fast as you can!</p>
     <p>Use the arrow keys to move left and right.</p>
