--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
 <script type="text/javascript" charset="utf-8" src="game/terrain.js"></script>
 <script type="text/javascript" charset="utf-8" src="game/interactable.js"></script>
 <script type="text/javascript" charset="utf-8">
-    Game.init( 'impressionism' );
+    Game.init( '01' );
 </script>
 </html>
