Adding better font stack

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>GAME OVER</h1>
   </div>
   <div id="rules">
-    <p>You woke up in a world of dark tunnels. You must escape as fast as you can!</p>
+    <p>You had a rough night. You wake up in a world of dark tunnels. Escape as fast as you can!</p>
     <p>Use the arrow keys to move left and right.</p>
     <p>Use X to pick up and drop rocks.</p>
     <p>Use Z to jump. Z also let's you throw rocks when holding one.</p>
