--- a/editor/index.html
+++ b/editor/index.html
@@ -28,6 +28,7 @@
   </div>
 </div>
 <div id="rectangle-tool"></div>
+<ul id="level-list"></ul>
     
 </body>
 <script type="text/javascript" charset="utf-8" src="../lib/jquery.min.js"></script>
