--- a/editor/index.html
+++ b/editor/index.html
@@ -26,6 +26,7 @@
   <div id="game"></div>
 </div>
 <div id="rectangle-tool"></div>
+<ul id="level-list"></ul>
     
 </body>
 <script type="text/javascript" charset="utf-8" src="../lib/jquery.min.js"></script>
@@ -39,6 +40,7 @@
 <script type="text/javascript" charset="utf-8" src="../game/sprite.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/entity.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/scene.js"></script>
+<script type="text/javascript" charset="utf-8" src="../game/walkthrough.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/level.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/hero.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/enemy.js"></script>
@@ -51,6 +53,7 @@
 <script type="text/javascript" charset="utf-8" src="../game/questlog.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/signs.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/dialog.js"></script>
+<script type="text/javascript" charset="utf-8" src="../game/map.js"></script>
 <script type="text/javascript" charset="utf-8" src="../game/menu.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/drag-tracker.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/editor.js"></script>
